# minecraft-remote-api

./: Makefile  README.md  pyproject.toml
examples/: analogclock.py  axis_flat.py  demo.py  hello.py  param_mc_remote.py
mc_remote/: connection.py  minecraft.py
tests/: param_mc_remote.py  test_world.py
