[project]
name = "minecraft-remote"
version = "0.1.0"
description = "Python Client-API for Minecraft"
authors = [
    {name = "Naohiro2g",email = "587586+Naohiro2g@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
