[tool.poetry]
name = "minecraft-remote"
version = "1.21.4+19"
description = "Python Client-API for Minecraft Remote or mc-remote"
authors = ["Naohiro2g <587586+Naohiro2g@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "mc_remote", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
